<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/prName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/prPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            android:maxHeight="100dp"
            android:contentDescription="@string/picDesc" />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPhone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/prPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtEMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtEmail"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/prEMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtFB"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/prFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
            android:id="@+id/txtNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNote"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/prNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call" />

        <Button
            android:id="@+id/btnFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fb" />

    </LinearLayout>
    
    </ScrollView>
